--- a/api-server/config/locales/models/company_product.yml
+++ b/api-server/config/locales/models/company_product.yml
@@ -4,7 +4,7 @@ ja:
       company_product: 企業製品
     attributes:
       company_product:
-        name: 名前
+        name: プロダクト名
         description: 説明
         url: URL
         logo: ロゴ
